
ChangeLog
 [ + added, - removed, * changed ]
 * 26Jan2015 Fixed bug in calltrace.h that made that the label of the caller
 events when is a single level of the stack requested to be always 70000000,
 despite the level requested.
 * 23Jan2015 Changed primary lib_LTLIBRARIES to noinst_LTLIBRARIES at
 src/tracer/stats/Makefile.am to fix a bug in K computer.
 * 19Dec2014 Improve Java examples for Darwin & Linux
             Improve support for Darwin
 * 18Dec2014 Fix installation script (substitute) to work on AIX & Darwin
 * 15Dec2014 Fix CUDA+MPI+OpenMP instrumentation library
             Improve location for libbfd & libiberty from the binutils package
             Capture callstack at dynamic memory instrumentation points
             Improve support for AARCH64 architectures
 * 12Dec2014 Upgraded DLB support
 * 04Dec2014 Fixed PCF labels regarding OpenSHMEM, they don't appear now if
             there's no SHMEM events in the trace
 + 03Dec2014 Adding list-functions DynInst based tool (not installed)
             Improve detection for libiberty & libbfd within binutils package
             Add minimal support for aarch64 (ARM64)
 + 19Nov2014 Recorded events for bytes sent/received via SHMEM calls
             Added new states for SHMEM operations
	     Now emmitting callers at the entry of SHMEM calls
 * 18Nov2014 Fixed bug in *Distribute_XML routines that caused sporadic crashes
 * 17Nov2014 Fixed time synchronization and running states in shmem traces 
             Added configure parameters to specify the OpenSHMEM dependencies
	     --with-openshmem-deps-libsdir and --with-openshmem-deps-libs
 + 14Nov2014 Added 'wrapgen' script to generate lists of wrappers/probes automatically
 * 03Nov2014 Fix capturing >1k function names through binutils
             Added instrumentation for:
               MPI_Win_post, MPI_Win_complete, MPI_Win_wait
	     Fixed bug in the initialization of the on-line gremlins   
 + 31Oct2014 Added instrumentation for: